--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-image: linear-gradient(rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.5)), url("./homepic.jpg");
+    rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("./homepic.jpg");
     background-size: cover; 
     background-repeat: no-repeat;   
     height: 591px;
@@ -9,7 +9,7 @@ nav img{
     display: inline-block;
     width: 50px;
     border-radius: 50px;
-    margin-left: 15px;
+    margin-left: 40px;
 }
 nav a{
     color: white;
@@ -17,10 +17,11 @@ nav a{
     float: right;
     text-decoration: none;
     padding-right: 40px;
-    margin-top: 15px;
-    font-size: large;
+    margin-top: 19px;
+    font-size:medium;
     border: none;
     padding-left : 33px;
+    text-transform: uppercase;
 }
 a:hover{
 color: #04AA6D;
@@ -56,7 +57,7 @@ p{
 }
 .btn1{
     background-color: #04AA6D;
-    border: none;
+    border: 2px solid #000000;
     color: white;
     padding: 15px 32px;
     text-align: center;
@@ -68,7 +69,7 @@ p{
   }
   .btn2{
 background-color: rgb(0, 0, 0, 0.9);
-    border: none;
+    border: 2px solid #04AA6D;
     color: white;
     padding: 15px 32px;
     text-align: center;
